<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/App_Icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_android_black_24dp"
        android:contentDescription="@string/app_icon" />
    <Button
        android:id="@+id/register_profile_button"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/register_profile"/>
    <Button
        android:id="@+id/update_profile_button"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/update_profile" />
</LinearLayout>