<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/verify_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/name" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/verify_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/faceVerify_button"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/back"
                android:textSize="15sp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/passVerify_button"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/confirm"
                android:textSize="15sp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>